--- a/src/app/leagueStandings/components/standings/Standings.scss
+++ b/src/app/leagueStandings/components/standings/Standings.scss
@@ -3,19 +3,12 @@
 
   // Coloring relegations and Champions League???
 
-  // tbody tr:nth-child(-n+4) {
-  //   background: rgba(#BADA55, 0.2);
+  tbody tr:nth-child(5) {
+    border-top: 2px solid rgba(black, 0.3);
+    border-bottom: 2px solid rgba(black, 0.3);
+  }
 
-  //   &:hover {
-  //     background: rgba(#BADA55, 0.4);
-  //   }
-  // }
-
-  // tbody tr:nth-last-child(-n+2) {
-  //   background: rgba(#D11D05, 0.2);
-
-  //   &:hover {
-  //     background: rgba(#D11D05, 0.4);
-  //   }
-  // }
+  tbody tr:nth-last-child(3) {
+    border-top: 2px solid rgba(black, 0.3);
+  }
 }
