added fixtures and loading animation

--- a/src/app/leagueStandings/components/standings/Standings.scss
+++ b/src/app/leagueStandings/components/standings/Standings.scss
@@ -12,3 +12,10 @@
     border-top: 2px solid rgba(black, 0.3);
   }
 }
+
+// check for leaky styles
+.loader {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+}
