fetching multiple leagues

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,4 +27,10 @@ body {
   font-family: sans-serif;
 }
 
+.active {
+  font-size: 20px;
+  font-weight: bold;
+  color: red;
+}
+
 /*<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">*/
